Fixing modal overlay on 'add company page', for adding new contact -- now fits any page on mobile (and scrolls), while locking the scroll of the page behind

--- a/src/scss/partials/_tags.scss
+++ b/src/scss/partials/_tags.scss
@@ -2,6 +2,10 @@ body {
   background: #eee;
   color: #333;
   font-family: "Arvo", sans-serif;
+
+  &.is-modal {
+    overflow: hidden;
+  }
 }
 
 input, select, textarea {
